[package]

name = "digit-sequence"
version = "0.3.0"

authors = ["Gianluca Costa <gianluca@gianlucacosta.info>"]
edition = "2021"
description = "Sequence of u8 digits"
repository = "https://github.com/giancosta86/digit-sequence"
license = "MIT"

keywords = ["digits", "sequence", "conversion"]
categories = ["data-structures"]

include = [
    "LICENSE",
    "README.md",
    "/benches/",
    "/examples/",
    "/src/",
    "/tests/",
]


[dependencies]

serde = { version = "1.0.197", optional = true, features = ["derive"] }


[dev-dependencies]

pretty_assertions = "1.4.0"
speculate2 = "0.2"
serde_json = "1.0.114"
